<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scrollview_politica_privacidad"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            >

            <TextView
                android:id="@+id/textView_Titulo_Politica_Privacidad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/privacy_policy"
                android:layout_marginTop="20sp"
                android:textSize="30sp"
                android:textAlignment="center"
                android:textStyle="bold"
                style="@style/MyStyle">
            </TextView>

            <TextView
                android:id="@+id/textView_contenido_titulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="textStart"
                android:layout_marginTop="10sp"
                android:text="@string/content_information_collection"
                />

            <TextView
                android:id="@+id/textView_titulo_recopilacion_de_informacion"
                android:layout_marginTop="30sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/information_collection"
                android:textStyle="bold"
                style="@style/MyStyle">
            </TextView>
            <TextView
                android:id="@+id/textView_contenido_recopilacion_informacion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="textStart"
                android:layout_marginTop="10sp"
                android:text="@string/content_information_usage"
                />
            <TextView
                android:id="@+id/textView_titulo_uso_de_la_informacion"
                android:layout_marginTop="30sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/information_usage"
                android:textStyle="bold"
                style="@style/MyStyle">
            </TextView>
            <TextView
                android:id="@+id/textView_contenido_uso_de_la_informacion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="textStart"
                android:layout_marginTop="10sp"
                android:text="@string/content_information_sharing" />
            <TextView
                android:id="@+id/textView_titulo_compartir_informacion"
                android:layout_marginTop="30sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/information_sharing"
                android:textStyle="bold"
                style="@style/MyStyle">
            </TextView>
            <TextView
                android:id="@+id/textView_contenido_compartir_informacion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="textStart"
                android:layout_marginTop="10sp"
                android:text="No compartimos información personal identificable con terceros, excepto cuando sea necesario para proporcionar servicios o características que hayas solicitado específicamente, o cuando estemos obligados por la ley. Únicamente, otros usuarios, podrán ver tu nombre de usuario si decides publicar un cóctel."
                />
            <TextView
                android:id="@+id/textView_titulo_seguridad_de_la_informacion"
                android:layout_marginTop="30sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/information_security"
                android:textStyle="bold"
                style="@style/MyStyle">
            </TextView>
            <TextView
                android:id="@+id/textView_contenido_seguridad_de_la_informacion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="textStart"
                android:layout_marginTop="10sp"
                android:text="@string/content_information_security"/>
            <TextView
                android:id="@+id/textView_titulo_cambios_politica_privacidad"
                android:layout_marginTop="30sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/privacy_policy_changes"
                android:textStyle="bold"
                style="@style/MyStyle">
            </TextView>
            <TextView
                android:id="@+id/textView_contenido_cambios_politica_privacidad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="textStart"
                android:layout_marginTop="10sp"
                android:text="@string/content_privacy_policy_changes"/>
            <TextView
                android:id="@+id/textView_ultima_actualizacion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30sp"
                android:layout_marginBottom="60sp"
                android:text="@string/last_updated"
                android:textStyle="italic"
                />


        </LinearLayout>
    </ScrollView>
    <!-- TODO: Update blank fragment layout -->
</androidx.constraintlayout.widget.ConstraintLayout>