<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <EditText
        android:id="@+id/nombre_coctail"
        android:layout_width="296sp"
        android:layout_height="50sp"
        android:layout_marginStart="12sp"
        android:layout_marginTop="16sp"
        android:hint="@string/hint_nombre_ingrediente"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="48sp"
        android:layout_height="42dp"
        android:layout_marginLeft="10sp"
        android:src="@drawable/logococtail"
        app:layout_constraintBottom_toBottomOf="@+id/nombre_coctail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/nombre_coctail"
        app:layout_constraintTop_toTopOf="@+id/nombre_coctail" />

    <EditText
        android:id="@+id/descripcion_coctail"
        android:layout_width="347sp"
        android:layout_height="119sp"
        android:background="@drawable/bordes_cuadrados"
        android:hint="@string/hint_description"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nombre_coctail" />


    <TextView
        android:id="@+id/label_ingredientes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:padding="20sp"
        android:text="@string/hint_ingredients"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/descripcion_coctail"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/descripcion_coctail"
        app:layout_constraintTop_toBottomOf="@+id/descripcion_coctail" />

    <ScrollView
        android:layout_width="395sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="80sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_ingredientes"
        app:layout_constraintVertical_bias="0.194">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/label_ingrediente1"
                android:layout_width="200sp"
                android:layout_height="50sp"
                android:layout_marginLeft="15sp"
                android:text="@string/hint_ingrediente1"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/nombre_ingrediente1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_nombre_ingrediente"
                android:textAlignment="center"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/medida_ingrediente1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_medida"
                android:textAlignment="center"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/label_ingrediente2"
                android:layout_width="200sp"
                android:layout_height="50sp"
                android:layout_marginLeft="15sp"
                android:text="@string/hint_ingrediente2"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/nombre_ingrediente2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_nombre_ingrediente"
                android:textAlignment="center"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/medida_ingrediente2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_medida"
                android:textAlignment="center"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/label_ingrediente3"
                android:layout_width="200sp"
                android:layout_height="50sp"
                android:layout_marginLeft="15sp"
                android:text="@string/hint_ingrediente3"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/nombre_ingrediente3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_nombre_ingrediente"
                android:textAlignment="center"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/medida_ingrediente3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_medida"
                android:textAlignment="center"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/label_ingrediente4"
                android:layout_width="200sp"
                android:layout_height="50sp"
                android:layout_marginLeft="15sp"
                android:text="@string/hint_ingrediente4"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/nombre_ingrediente4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_nombre_ingrediente"
                android:textAlignment="center"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/medida_ingrediente4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_medida"
                android:textAlignment="center"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/label_ingrediente5"
                android:layout_width="200sp"
                android:layout_height="50sp"
                android:layout_marginLeft="15sp"
                android:text="@string/hint_ingrediente5"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/nombre_ingrediente5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_nombre_ingrediente"
                android:textAlignment="center"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/medida_ingrediente5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_medida"
                android:textAlignment="center"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/label_ingrediente6"
                android:layout_width="200sp"
                android:layout_height="50sp"
                android:layout_marginLeft="15sp"
                android:text="@string/hint_ingrediente6"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/nombre_ingrediente6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_nombre_ingrediente"
                android:textAlignment="center"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/medida_ingrediente6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_medida"
                android:textAlignment="center"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/label_ingrediente7"
                android:layout_width="200sp"
                android:layout_height="50sp"
                android:layout_marginLeft="15sp"
                android:text="@string/hint_ingrediente7"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/nombre_ingrediente7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_nombre_ingrediente"
                android:textAlignment="center"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/medida_ingrediente7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_medida"
                android:textAlignment="center"
                android:textSize="20sp" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:paddingLeft="15sp"
                android:paddingRight="15sp"
                android:layout_marginTop="20sp"
                app:layout_constraintBottom_toTopOf="@+id/label_ingredientes"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/descripcion_coctail">

                <RadioButton
                    android:id="@+id/radioButtonAlcoholic"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:paddingLeft="15sp"
                    android:paddingRight="15sp"
                    android:layout_weight="1"
                    android:text="@string/category_Alcoholic" />

                <RadioButton
                    android:id="@+id/radioButtonNonAlcoholic"
                    android:layout_weight="1"
                    android:paddingLeft="15sp"
                    android:paddingRight="15sp"
                    android:layout_width="match_parent"
                    android:gravity="center_horizontal"
                    android:layout_height="wrap_content"
                    android:text="@string/category_Non_Alcoholic" />
            </RadioGroup>

            <Button
                android:id="@+id/add_tu_foto"
                android:layout_width="300sp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10sp"
                android:text="@string/buron_picture" />

            <Button
                android:id="@+id/guarda_tu_coctail"
                android:layout_width="300sp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="500sp"
                android:text="@string/buton_guarda" />

        </LinearLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>